<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.InsertDoctorActivity"
    >

    <include
        android:id="@+id/app_bar_insert_doctor"
        layout="@layout/app_bar_layout"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_insert_doctor"
        app:layout_constraintBottom_toBottomOf="parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/linear_doc_add_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edit_doc_add_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_doc_num"
                    android:layout_weight="1"
                    android:inputType="number"

                    android:importantForAutofill="no" />
                <Button
                    android:id="@+id/btn_doc_add_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="@dimen/dimen_18"
                    android:layout_marginHorizontal="@dimen/dimen_20"
                    />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_doc_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/linear_doc_add_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btn_doc_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert"
                android:textSize="@dimen/dimen_18"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dimen_20"
                app:layout_constraintTop_toBottomOf="@+id/recycler_doc_add"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>